--- a/data-charts/package.json
+++ b/data-charts/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "echarts": "^4.2.1",
+    "element-ui": "^2.12.0",
     "jquery": "^3.4.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
@@ -20,6 +21,7 @@
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "babel-eslint": "^10.0.1",
+    "d3": "^5.12.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "stylus": "^0.54.5",
