--- a/three-world-china/package.json
+++ b/three-world-china/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "echarts": "^4.3.0",
+    "echarts-gl": "^1.1.1",
     "jquery": "^3.4.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
